[package]
name = "wp-pkg"
version = "0.1.0"
authors = ["Dylan Blokhuis <dylanblokhuis3@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
walkdir = "2"
mysql = "20"
simple-stopwatch = "0.1"
regex = "1"