[package]
name = "wp-pkg"
version = ""
license = "MIT"
authors = ["Dylan Blokhuis <dylanblokhuis3@hotmail.com>"]
edition = "2018"
repository = "https://github.com/dylanblokhuis/wp-pkg"

[[bin]]
name = "wp-pkg"
path = "src/main.rs"

[dependencies]
zip = "0.5"
walkdir = "2"
mysql = "20"
simple-stopwatch = "0.1"
regex = "1"
