[package]
name = "wp-pkg"
version = "0.2.0"
license = "MIT"
authors = ["Dylan Blokhuis <dylanblokhuis3@hotmail.com>"]
edition = "2018"
repository = "https://github.com/dylanblokhuis/wp-pkg"

[[bin]]
name = "wp-pkg"
path = "src/main.rs"

[dependencies]
zip = { version = "0.5", default-features = false }
walkdir = "2"
mysql = "20"
simple-stopwatch = "0.1"
regex = "1"
clap = "2.33"